# absa-train

./: .dockerignore  .gitignore  Dockerfile  absa-training-a6f133b_vnsf-44_unfreezelast2_attention.json  absa_train.ipynb  atemp.txt  build.sh  cal_metrics.py  calculate_metrics.py  cloudbuild.yaml  config.py  config_test.py  custom-job-config.yaml  data.py  live_att_test.py  live_test.py  load.py  load_save.py  loss.py  loss_history.json  model.py  plot_history.py  predict.py  predict2.py  preprocess.py  pyproject.toml  pyrun.bash  record.py  requirements.txt  run.sh  sample_traindata.py  streamlit_app.py  tag_push.sh  temp_cmd.txt  tempt.py  test_torch.py  tokenizer.pkl  topic_mapping.pkl  train.py  train_stas.py  (+3 more)
multisentiment-uit-vsfc/: df_final_test.csv  df_final_train.csv  df_final_validation.csv  fn_multi_aspect_test.csv  fn_multi_aspect_val.csv  multi_aspect_validation.csv
results_absa-training-9751b24_vnsf-44/: aspect_detection.txt  aspect_facility_detection.txt  aspect_lecturer_detection.txt  aspect_others_detection.txt  aspect_program_detection.txt  sentiment_facility.txt  sentiment_lecturer.txt  sentiment_others.txt  sentiment_overall.txt  sentiment_program.txt
results_absa-training-d8eeb6f_vnsf-44/: aspect_detection.txt  aspect_facility_detection.txt  aspect_lecturer_detection.txt  aspect_others_detection.txt  aspect_program_detection.txt  sentiment_facility.txt  sentiment_lecturer.txt  sentiment_others.txt  sentiment_overall.txt  sentiment_program.txt
results_absa-training-e14015d_vnsf-44/: aspect_detection.txt  aspect_facility_detection.txt  (+8 more)
(+22 files in other folders)
