[project]
name = "absa-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "google-cloud-storage>=3.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pip>=26.0.1",
    "py-vncorenlp>=0.1.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
